--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </tfoot>
   </table>
 
-    <a href="hobbies.HTML">My Hobbies</a>
+    <a href="file:///C:/Users/FaizanAbdulrazaqBand/Desktop/Web%20Development/HTML%20Personal%20Site/hobbies.html">My Hobbies</a>
 <br>
     <a href="contact.html">Contact me</a>
     <hr>
